--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 asgiref==3.4.1
 Django==3.2.6
+django-autoslug==1.9.8
 django-cors-headers==3.7.0
 django-rest-framework==0.1.0
 djangorestframework==3.12.4
