--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ django-cors-headers = "*"
 djangorestframework-simplejwt = "*"
 pillow = "*"
 django-autoslug = "*"
+factory-boy = "*"
 
 [dev-packages]
 
