--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,11 @@ django-cors-headers==3.7.0
 django-rest-framework==0.1.0
 djangorestframework==3.12.4
 djangorestframework-simplejwt==4.7.2
+factory-boy==3.2.0
 Pillow==8.3.1
 PyJWT==2.1.0
+python-dateutil==2.8.2
 pytz==2021.1
+six==1.16.0
 sqlparse==0.4.1
+text-unidecode==1.3
