--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
 asgiref==3.4.1
 Django==3.2.6
 django-autoslug==1.9.8
-django-cors-headers==3.7.0
+django-cors-headers==3.8.0
 django-rest-framework==0.1.0
 djangorestframework==3.12.4
-djangorestframework-simplejwt==4.7.2
+djangorestframework-simplejwt==4.8.0
 factory-boy==3.2.0
+Faker==8.11.0
 Pillow==8.3.1
 PyJWT==2.1.0
 python-dateutil==2.8.2
